--- a/package.json
+++ b/package.json
@@ -4,20 +4,33 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host 0.0.0.0 --port $PORT",
     "build": "vite build",
-    "preview": "vite preview --port $PORT --host 0.0.0.0"
+    "start": "vite preview --host 0.0.0.0 --port $PORT"
   },
-  "dependencies": {
-    "react-dom": "19.1.1",
-    "react": "19.1.1",
-    "@google/genai": "1.14.0",
-    "react-router-dom": "6.25.1",
-    "firebase": "10.12.4"
-  },
+ "dependencies": {
+  "chart.js": "^4.3.0",
+  "date-fns": "^2.30.0",
+  "react-chartjs-2": "^5.2.0",
+  "react": "^19.1.1",
+  "react-dom": "^19.1.1",
+  "react-router-dom": "^7.8.0",
+  "framer-motion": "^12.23.12",
+  "lucide-react": "^0.539.0",
+  "marked": "^13.0.0",
+  "turndown": "^7.1.3",
+  "firebase": "^12.1.0",
+  "vite": "^6.2.0",
+  "@vitejs/plugin-react": "^4.0.0"
+},
   "devDependencies": {
     "@types/node": "^22.14.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
-  }
+    "typescript": "~5.8.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "license": "MIT",
+  "author": "Nafis",
+  "description": "A personal AI companion with React and Vite."
 }
